--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "crypto-js": "^3.1.6",
-    "requirejs": "^2.2.0"
+    "crypto-js": "^3.1.6"
   },
   "devDependencies": {},
   "scripts": {
